# k8s-ai-support-kas

./: .env.example  .gitignore  Deployment_Usage_Guide.md  Dockerfile  Makefile  README.md  Steps.md  docker-compose.yml  install.sh  pyproject copy.toml  pyproject.toml
docs/: Deployment_Usage_Guide.md  vscode_integration.md
eksctl/: README.md  eks-k8s-ai-support-cluster.yaml
helm/k8s-ai-support/: Chart.yaml  values.yaml
helm/k8s-ai-support/templates/: _helpers.tpl  clusterrole.yaml  deployment.yaml  secret.yaml  serviceaccount.yaml
src/: __init__.py
src/agent/: __init__.py  graph.py  nodes.py  state.py
src/cli/: __init__.py  main.py  mcp_server.py
src/config/: __init__.py  blocklist.py  settings.py
src/llm/: __init__.py  factory.py  prompt_templates.py
src/tools/: __init__.py  kubectl_wrapper.py  rag_tools.py  summarizer.py
test-scenarios/: 00-namespace.yaml  01-crashloop.yaml  02-oomkilled.yaml  03-imagepullbackoff.yaml  04-pending-unschedulable.yaml  05-deployment-failing.yaml  06-liveness-probe-fail.yaml  07-missing-secret.yaml  08-service-no-endpoints.yaml  README.md  apply-all.sh
tests/: __init__.py  conftest.py  test_agent.py  test_mcp_server.py
tests/fixtures/: kind_cluster.yaml
